# physics-simulator

./: .clangd  CMakeLists.txt  LICENSE  README.md
include/: const.hpp  graphics.hpp  object.hpp  simulator.hpp  types.hpp  vector.hpp
src/: graphics.cpp  main.cpp  object.cpp  simulator.cpp  vector.cpp
